# banco-dados-techdengue

./: .coverage  .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  ATUALIZACAO_V5_APLICADA.md  CHANGELOG_IMPROVEMENTS.md  COMO_VER_DASHBOARD_NOVO.md  CONTRIBUTING.md  DASHBOARD_V6_NOVO_VISUAL.md  DEPLOY.md  DEPLOY_GUIDE.md  DOCUMENTACAO_COMPLETA.md  Dockerfile  Dockerfile.dashboard  GUIA_INTEGRACAO.md  IMPLEMENTACAO_COMPLETA_FASES_1_A_8.md  Makefile  README.md  README_DEPLOY.md  RELATORIO_GERENCIAL_DADOS.md  RUN_MONITOR_QUALIDADE.bat  START_DASHBOARD.bat  TODO.md  analyze_data_quality.py  commitlint.config.js  conectar_banco_gis.py  criar_base_integrada.py  criar_mega_tabela.py  debug_hectares.py  debug_hectares_detalhado.py  deploy-local.bat  docker-compose.yml  mkdocs.yml  netlify.toml  next.config.ts  package.json  pipeline_etl_completo.py  playwright.config.ts  (+15 more)
.github/: pull_request_template.md
analises/: PILAR1_ANALISES_TECHDENGUE.md  PILAR2_ANALISES_DENGUE.md  PILAR3_ANALISES_INTEGRADAS.md  README_ANALISES.md  SUMARIO_EXECUTIVO.md
apresentacao/: 01_validacao_dados.py  02_analise_cisarp.py  03_visualizacoes.py  04_analise_impacto_epidemiologico.py  ANALISES_COMPLETAS_CISARP.md  CHANGELOG.md  CHEAT_SHEET_APRESENTACAO.md  EXECUTAR_ANALISE.bat  EXECUTAR_DASHBOARD.bat  EXEC_SUMMARY_DEFINITIVO.md  FASE1_COMPLETA_RESUMO.md  FASE4_COMPLETA_FINAL.md  FASE5_COMPLETA_FINAL.md  GUIA_ANALISE_IMPACTO.md  INDICE_FINAL.md  INICIO_AQUI.md  (+27 more)
sdk/python/: README.md  pyproject.toml
sdk/python/techdengue/: __init__.py  client.py  models.py
(+529 files in other folders)
